RESOLVED FIXED25379
REGRESSION(r41772): selected option in dropdown reverts at americanexpress.com
https://bugs.webkit.org/show_bug.cgi?id=25379
Summary REGRESSION(r41772): selected option in dropdown reverts at americanexpress.com
Alice Liu
Reported 2009-04-24 14:57:49 PDT
When paying one's bill at americanexpress.com, choosing a particular bank account from the dropdown reverts the selection back to default, "select a bank account". Using the mouse and using the keyboard both encounter this problem. This issue prevents users from being able to submit the form. Regression caused by http://trac.webkit.org/changeset/41772
Attachments
proposed fix (5.25 KB, patch)
2009-04-30 04:20 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2009-04-24 15:00:33 PDT
I assume that one needs an account to reproduce this, is it correct?
Alice Liu
Comment 2 2009-04-24 15:02:34 PDT
Alexey Proskuryakov
Comment 3 2009-04-25 01:35:31 PDT
*** Bug 25346 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4 2009-04-30 04:20:32 PDT
Created attachment 29908 [details] proposed fix
Darin Adler
Comment 5 2009-04-30 07:34:10 PDT
Comment on attachment 29908 [details] proposed fix r=me
Alexey Proskuryakov
Comment 6 2009-04-30 09:59:19 PDT
Committed <http://trac.webkit.org/changeset/43064>. Please verify with a nightly build from <http://nightly.webkit.org> (with a revision larger than 43064), as I don't have an account, and the fix is based on a guess at what was going wrong.
Note You need to log in before you can comment on or make changes to this bug.